force-app/main/default/objects/Disbursement_Item__c/Disbursement_Item__c.object-meta.xml
<CustomObject>
    <label>Disbursement Item</label>
    <nameField>
        <label>Disbursement Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Disbursement Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>