force-app/main/default/objects/Disbursement_Item__c/fields/Account_Number_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_Conversion__c</fullName>
    <label>Account Number (Conversion)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>