force-app/main/default/objects/Disbursement_Item__c/fields/Approval_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Approval_Rationale__c</fullName>
    <label>Approval Rationale</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>