force-app/main/default/objects/Disbursement_Item__c/fields/Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Disbursement__c</fullName>
    <label>Disbursement</label>
    <referenceTo>Disbursement_Request__c</referenceTo>
    <relationshipLabel>Disbursement Items</relationshipLabel>
    <relationshipName>Disbursement_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>