force-app/main/default/objects/Disbursement_Item__c/fields/Guardian_Notified__c.field-meta.xml
<CustomField>
    <fullName>Guardian_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Guardian Notified</label>
    <type>Checkbox</type>
</CustomField>