force-app/main/default/objects/Disbursement_Item__c/fields/Ordered_Item_FFM__c.field-meta.xml
<CustomField>
    <fullName>Ordered_Item_FFM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ordered Item FFM</label>
    <type>Checkbox</type>
</CustomField>