force-app/main/default/objects/Disbursement_Item__c/fields/Trust__c.field-meta.xml
<CustomField>
    <fullName>Trust__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trust</label>
    <referenceTo>Trust__c</referenceTo>
    <relationshipLabel>Disbursement Items</relationshipLabel>
    <relationshipName>Disbursement_Items</relationshipName>
    <type>Lookup</type>
</CustomField>